0.2.0
 - feat: add quadri-wave lateral shearing interferogram analysis
 - feat: implement FFT with PyFFTW
 - setup: remove unused install_requires
0.1.2
 - ref: add base class for Fourier hologram analysis
0.1.1
 - fix: some Fourier filters did not work properly due to earlier
   refactorization
 - enh: support hologram data that are RGB(A) (by only taking R)
 - tests: imported tests from qpimage
0.1.0
 - initial release